# django-pystock

./: .env.dist  README.md  SPECS.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml  pystock.yml  pystock_deployment.yml  pystock_dev.yml  pystock_staging.yml
apps/account/: admin.py  forms.py  models.py  urls.py  views.py
apps/auth/: urls.py  views.py
apps/authentication/: urls.py  views.py
apps/catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/inventory/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/management/: admin.py  models.py  urls.py  views.py
apps/reporting/: urls.py  views.py
apps/users/: urls.py  views.py
fixtures/: default_groups.json  initial_data.json
pystock/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
pystock/settings/: __init__.py  base.py  dev.py  prod.py  staging.py
src/: .env.dist
src/pystock/: settings.py  urls.py
static/css/: style.css
static/js/: custom.js
templates/: 403.html  base.html  header.html  home.html  index.html
tests/: conftest.py
tests/account/: test_view_profile.py  test_view_register.py
tests/catalog/: test_model_category_product.py  test_view_catalog.py
tests/inventory/: test_form_movement.py  test_view_inventory.py  test_view_movements.py
tests/management/: test_view_locations.py
tests/reporting/: test_view_api.py  test_view_reporting.py
tests/unit/: test_form_movement.py  test_form_stock.py  test_forms.py  test_models.py
tests/views/: test_authentication.py  test_catalog.py  (+9 more)
(+74 files in other folders)
