[project]
name = "django-pystock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-environ>=0.12.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pystock.settings"
